otuswork-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otuswork-service
spec:
  selector:
    app: otuswork
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
  type: NodePort
