otuswork-ingress-bad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otuswork-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/alcaver/(.*)
            pathType: Prefix
            backend:
              service:
                name: otuswork-service
                port:
                  number: 8000
    - host: minikube.tk-chel.ru
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: otuswork-service
                port:
                  number: 8000
